src/main/metadata-excluded/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Trim__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle (Asset) 
Function: Vehicle Interiors
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <inlineHelpText>Vehicle Interiors</inlineHelpText>
        <label>Trim</label>
        <picklist>
            <picklistValues>
                <fullName>125A MB-TEX / LEATHER TWIN/ARTICO - BEIGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARTICO/珍珠光泽米色织物</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARTICO/羊驼灰织物</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARTICO/黑色织物</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARTICO皮饰, 黄色</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRABUS皮饰套件</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo 内饰，典雅红色</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo 内饰，栗色</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo内饰，毛里求斯蓝</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo内饰，沙灰色</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo内饰，浅棕色</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo内饰，炭灰色</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo内饰，石墨绿</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo内饰，神秘红</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo内饰，神秘蓝</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo内饰，自然色</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo内饰，银色</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo 内饰，黑色</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo木饰，炭灰色</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo皮饰,瓷器黄/黑</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo纳帕皮革，黑色和白色，带特殊黑色缝线</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo风格木饰, 钢琴漆黑</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo风格的方向盘和换档杆, 钢琴漆黑</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo风格的方向盘和换档杆，炭灰色</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo风格的方向盘和换档杆，自然色</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leather Exclusive brown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB-TEX / LEATHER TWIN/ARTICO - BLACK / ANTHRACITE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB-TEX / LEATHER TWIN/ARTICO - GREY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAPPA自然米色真皮</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>加利福尼亚浅褐</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UsVIN__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle (Asset)
Function: Vehicle UsVIN
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <inlineHelpText>UsVIN</inlineHelpText>
        <label>UsVIN</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle (Asset) 
Function: Flag to indicate whether the VIN is valid
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <inlineHelpText>Flag to indicate whether the VIN is valid</inlineHelpText>
        <label>Valid</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>